k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-tuning
  namespace: statex-apps
  labels:
    app: cv-tuning
spec:
  type: ClusterIP
  selector:
    app: cv-tuning
  ports:
    - name: http
      port: 3379
      targetPort: 3379
